--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+$brandColor: #000000;
 
+body {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal; 
+  background: linear-gradient(to bottom,
+    $brandColor,
+    darken($brandColor, 15%)
+  );
+  color: white;
+  height: 100vh;
+  margin: 0;
+  display: grid;
+  place-items: center;
+}
+
+.one{
+  background-color:  #d1cdc1;
+  color: #140d07;
+  margin:10% 0% 15% 0%;
+  padding: 8% 25%;
+}
+
+.two{
+  background-color: #1c4595;
+}
+
+.three{
+  background-color:#c6521f;
+}
+
+.four{
+  background-color:#4f6036;
+}
+
+.Landing, #SBB, #F{
+  font-family: "Bebas Neue", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.Title {
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.text-one{
+  margin-right: 50%;
+  padding: 5%;
+  text-align: center;
+}
